<resources>
    <string name="app_name">Aurora Weather</string>
    <string name="search_history">Історія пошуку</string>
    <string name="settings_title">Налаштування</string>
    <string name="temperature_units">Одиниці температури</string>
    <string name="wind_speed_units">Одиниці швидкості вітру</string>
    <string name="theme">Тема</string>
    <string name="light_theme">Світла</string>
    <string name="dark_theme">Темна</string>
    <string name="system_default">Системна</string>
    <string name="save_changes">Зберегти зміни</string>
    <string name="feedback">Залишити відгук або запропонувати ідею</string>
    <string name="go_back">Go Back</string>
    <string name="language">Мова</string>
    <string name="english">Англійська</string>
    <string name="ukrainian">Українська</string>
    <string name="unit_ms">m/s</string>
    <string name="unit_kmh">km/h</string>
    <string name="unit_mph">mph</string>
    <string name="swipe_hint">Swipe right/left</string>
</resources>
